<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <parent>
		<groupId>com.mobius-software</groupId>
		<artifactId>mobius-public-parent</artifactId>
		<version>1.0.10</version>
	</parent>

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.mobius-software.fsm</groupId>
    <artifactId>squirrel-foundation</artifactId>
    <version>0.4.0-6-SNAPSHOT</version>
    <packaging>bundle</packaging>
    <name>squirrel foundation</name>
    <description>foundation module of squirrel framework which provided event driven infrastructure and a finite state machine implementation.</description>


    <url>https://github.com/RestComm/squirrel</url>
    <inceptionYear>2013</inceptionYear>

    <properties>
        <log4j2.version>2.19.0</log4j2.version>
		<junit.version>4.11</junit.version>
		<compiler.plugin.version>3.8.1</compiler.plugin.version>
    </properties>

    <developers>
        <developer>
            <id>hekailiang</id>
            <name>Henry.He</name>
            <email>hekailiang@gmail.com</email>
        </developer>
        <developer>
            <id>hrosa</id>
            <name>Henrique Rosa</name>
            <email>henrique.rosa@telestax.com</email>
        </developer>
        <developer>
            <id>yulian.oifa</id>
            <name>Yulian Oifa</name>
            <email>yulian.oifa@mobius-software.com</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/mobius-software-ltd/squirrel.git</connection>
        <developerConnection>scm:git:git@github.com:mobius-software-ltd/squirrel.git</developerConnection>
        <url>https://github.com/mobius-software-ltd/squirrel</url>
      	<tag>HEAD</tag>
  	</scm>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>

    <dependencies>
        <!-- Testing dependencies -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.10.19</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>           
        </dependency>
        <!-- Project dependencies -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>33.4.0-jre</version>
        </dependency>
       <dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j2.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${log4j2.version}</version>
			<scope>provided</scope>
		</dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.1</version>
        </dependency>
        <dependency>
            <groupId>org.mvel</groupId>
            <artifactId>mvel2</artifactId>
            <version>2.1.8.Final</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/jakarta.annotation/jakarta.annotation-api -->
		<dependency>
		    <groupId>jakarta.annotation</groupId>
		    <artifactId>jakarta.annotation-api</artifactId>
		    <version>${annotation.api.version}</version>
		</dependency>        
    </dependencies>

	<profiles>
		<profile>
			<id>java8</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<annotation.api.version>2.1.0</annotation.api.version>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>${compiler.plugin.version}</version>
						<configuration>
							<source>1.8</source>
							<target>1.8</target>
							<debug>1.8</debug>
							<encoding>UTF-8</encoding>
						</configuration>
					</plugin>
				</plugins>
			</build>			
		</profile>
		<profile>
			<id>java11</id>
			<properties>
				<annotation.api.version>3.0.0</annotation.api.version>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>${compiler.plugin.version}</version>
						<configuration>
							<source>11</source>
							<target>11</target>
							<debug>11</debug>
							<encoding>UTF-8</encoding>
						</configuration>
					</plugin>
				</plugins>
			</build>			
		</profile>
	</profiles>
	
    <build>    	
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-eclipse-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <downloadSources>true</downloadSources>
                </configuration>
            </plugin>            
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.7.1</version>
                <configuration>
                    <!-- <redirectTestOutputToFile>true</redirectTestOutputToFile> -->
                    <argLine>-XX:MaxPermSize=128m -Xmx256m</argLine>
                    <!-- Force alphabetical order to have a reproducible build -->
                    <runOrder>alphabetical</runOrder>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <version>2.4.0</version>
                <extensions>true</extensions>
                <configuration>
                    <instructions>
                        <Export-Package>org.squirrelframework.*</Export-Package>
                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                    </instructions>
                </configuration>
            </plugin>
        </plugins>
    </build>
    
    <repositories>
		<repository>
			<id>mobius-public-repository-group</id>
			<name>Mobius Public Maven Repository Group</name>
			<url>https://oss.sonatype.org/content/groups/public/</url>
			<layout>default</layout>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
			</snapshots>
		</repository>

		<!-- the place to extra repos -->
	</repositories>
</project>
